# worklens-env

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: inference.py
server/: Dockerfile  app.py  data_generator.py  graders.py  requirements.txt  worklens_environment.py
