[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worklens-env"
version = "1.0.0"
description = "Hint-driven developer task logging RL environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.7.4",
    "requests>=2.32.3",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
server = "worklens_env.server.app:main"
 
[tool.hatch.build.targets.wheel]
packages = ["."]